# qt_demo

1/: CMakeLists.txt  QMake.pro  main.cpp
2/: main.cpp
QListWidget/: CMakeLists.txt  main.cpp
